--- a/index.html
+++ b/index.html
@@ -24,20 +24,18 @@
       font-family: 'Segoe UI', sans-serif;
       background-color: var(--background);
       color: var(--text);
-      display: grid;
-      grid-template-rows: auto 1fr auto;
-      min-height: 100vh;
+      line-height: 1.6;
     }
 
     header {
       background-color: var(--primary);
       color: white;
       text-align: center;
-      padding: 3rem 1rem;
+      padding: 4rem 2rem;
     }
 
     header h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       margin-bottom: 0.5rem;
     }
 
@@ -46,47 +44,46 @@
       color: #ccc;
     }
 
-    main {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 2rem;
-      padding: 3rem 2rem;
-    }
-
     section {
-      background-color: var(--card-bg);
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
-      transition: transform 0.3s ease;
-    }
-
-    section:hover {
-      transform: translateY(-4px);
+      padding: 4rem 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
     }
 
     section h2 {
       margin-bottom: 1rem;
       color: var(--primary);
+      font-size: 2rem;
     }
 
     section p {
       color: var(--light-text);
-      line-height: 1.6;
+      font-size: 1rem;
     }
 
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: var(--primary);
-      color: white;
-      font-size: 0.9rem;
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .card {
+      background-color: var(--card-bg);
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
     }
 
     .btn {
       display: inline-block;
-      margin-top: 1rem;
-      padding: 0.6rem 1.2rem;
+      margin-top: 1.5rem;
+      padding: 0.7rem 1.5rem;
       background-color: var(--accent);
       color: white;
       border: none;
@@ -100,53 +97,86 @@
       background-color: #379ee0;
     }
 
+    footer {
+      background-color: var(--primary);
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
     @media (max-width: 600px) {
       header h1 {
-        font-size: 2rem;
+        font-size: 2.2rem;
+      }
+
+      section h2 {
+        font-size: 1.6rem;
       }
     }
   </style>
 </head>
 <body>
 
+  <!-- Hero -->
   <header>
     <h1>Ronny Designs</h1>
-    <p>Crafting modern, responsive websites with purpose</p>
+    <p>Crafting modern, responsive websites with clarity and purpose</p>
   </header>
 
-  <main>
-    <section>
-      <h2>About Me</h2>
-      <p>
-        I'm a passionate front-end developer focused on clean design and responsive layouts. I love creating user-friendly, visually engaging websites using modern tools like HTML, CSS Grid, and JavaScript.
-      </p>
-    </section>
+  <!-- About -->
+  <section>
+    <h2>About Me</h2>
+    <p>I’m a front-end designer and developer focused on clean, user-friendly interfaces. I love building responsive layouts and experimenting with CSS Grid, Flexbox, and subtle interaction effects.</p>
+  </section>
 
-    <section>
-      <h2>Design Philosophy</h2>
-      <p>
-        My goal is to build websites that are both beautiful and functional. I prioritize accessibility, clarity, and smooth user experiences. CSS Grid allows me to create flexible layouts that adapt seamlessly across devices.
-      </p>
-    </section>
+  <!-- Services -->
+  <section>
+    <h2>Services</h2>
+    <div class="card-grid">
+      <div class="card">
+        <h3>Web Design</h3>
+        <p>Modern, mobile-first designs tailored to your brand and audience.</p>
+      </div>
+      <div class="card">
+        <h3>Front-End Development</h3>
+        <p>Clean and structured code using HTML, CSS, and JavaScript frameworks.</p>
+      </div>
+      <div class="card">
+        <h3>Responsive Layouts</h3>
+        <p>Every site I build adapts beautifully to all screen sizes.</p>
+      </div>
+    </div>
+  </section>
 
-    <section>
-      <h2>Skills</h2>
-      <p>
-        HTML5, CSS3, JavaScript, Responsive Design, CSS Grid, Flexbox, Git/GitHub, UI/UX Fundamentals. Currently learning more about animation and interactive design.
-      </p>
-    </section>
+  <!-- Portfolio -->
+  <section>
+    <h2>Sample Projects</h2>
+    <div class="card-grid">
+      <div class="card">
+        <h3>MonoFrame</h3>
+        <p>A minimalist layout experiment using CSS Grid and structured spacing.</p>
+      </div>
+      <div class="card">
+        <h3>Digital Watch UI</h3>
+        <p>A stylish digital watch interface created with JavaScript and modern CSS.</p>
+      </div>
+      <div class="card">
+        <h3>Layout Explorer</h3>
+        <p>An interactive one-page site testing visual hierarchy and layout structure.</p>
+      </div>
+    </div>
+  </section>
 
-    <section>
-      <h2>Get in Touch</h2>
-      <p>
-        I’m always excited to collaborate or learn from others. If you’d like to work together or have feedback, feel free to reach out.
-      </p>
-      <a href="mailto:youremail@example.com" class="btn">Contact Me</a>
-    </section>
-  </main>
+  <!-- Contact -->
+  <section>
+    <h2>Let's Connect</h2>
+    <p>I’m open to collaboration, feedback, or new ideas. Feel free to reach out via email — I’d love to hear from you!</p>
+    <a href="mailto:youremail@example.com" class="btn">Email Me</a>
+  </section>
 
+  <!-- Footer -->
   <footer>
-    &copy; 2025 Ronny Designs — Web Designer & Front-End Developer
+    &copy; 2025 Ronny Designs — Crafted with HTML, CSS & a touch of creativity
   </footer>
 
 </body>
